--- a/front-end-vue/public/index.html
+++ b/front-end-vue/public/index.html
@@ -9,6 +9,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+<style>
+.v-slide-group__wrapper{
+  background-color: rgba(206, 205, 255, 0.0) !important;
+  backdrop-filter: blur(0px) !important;
+
+}
+.v-slide-group__content{
+  background-color: rgba(206, 205, 255, 0.0) !important;
+  backdrop-filter: blur(0px) !important;
+
+}
+.v-tabs{
+  background-color: rgba(206, 205, 255, 0.0) !important;
+}
+.v-tabs-bar{
+    background-color: rgba(206, 205, 255, 0.075) !important;
+  backdrop-filter: blur(8px) !important;
+  border-top: 1px solid white !important;
+  border-right: 1px solid white !important;
+  border-left: 1px solid white !important;
+  border-top-right-radius: 20px !important;
+  border-top-left-radius: 20px !important;
+}
+</style>
 </head>
 <body>
   <div id="app">
