--- a/front-end-vue/public/index.html
+++ b/front-end-vue/public/index.html
@@ -33,6 +33,15 @@
   border-top-right-radius: 20px !important;
   border-top-left-radius: 20px !important;
 }
+.nav-drawer .v-tabs-bar{
+    background-color: rgba(206, 205, 255, 0.075) !important;
+  backdrop-filter: blur(8px) !important;
+  border-top: 0px solid white !important;
+  border-right: 0px solid white !important;
+  border-left: 0px solid white !important;
+  border-top-right-radius: 20px !important;
+  border-top-left-radius: 20px !important;
+}
 </style>
 </head>
 <body>
