--- a/front-end-vue/public/index.html
+++ b/front-end-vue/public/index.html
@@ -4,15 +4,48 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="shortcut icon" type="png/x-icon" href="./glug-logo.png"/>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+<style>
+.v-slide-group__wrapper{
+  background-color: rgba(206, 205, 255, 0.0) !important;
+  backdrop-filter: blur(0px) !important;
+
+}
+.v-slide-group__content{
+  background-color: rgba(206, 205, 255, 0.0) !important;
+  backdrop-filter: blur(0px) !important;
+
+}
+.v-tabs{
+  background-color: rgba(206, 205, 255, 0.0) !important;
+}
+.v-tabs-bar{
+    background-color: rgba(206, 205, 255, 0.075) !important;
+  backdrop-filter: blur(8px) !important;
+  border-top: 1px solid white !important;
+  border-right: 1px solid white !important;
+  border-left: 1px solid white !important;
+  border-top-right-radius: 20px !important;
+  border-top-left-radius: 20px !important;
+}
+.nav-drawer .v-tabs-bar{
+    background-color: rgba(206, 205, 255, 0.075) !important;
+  backdrop-filter: blur(8px) !important;
+  border-top: 0px solid white !important;
+  border-right: 0px solid white !important;
+  border-left: 0px solid white !important;
+  border-top-right-radius: 20px !important;
+  border-top-left-radius: 20px !important;
+}
+</style>
 </head>
 <body>
   <div id="app">
-    <v-app>
-      <v-content>
-        <v-container>Hello world</v-container>
-      </v-content>
-    </v-app>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
