regex added in user profile

--- a/front-end-vue/public/index.html
+++ b/front-end-vue/public/index.html
@@ -36,8 +36,8 @@
   border-top: 1px solid white !important;
   border-right: 1px solid white !important;
   border-left: 1px solid white !important;
-  border-top-right-radius: 20px !important;
-  border-top-left-radius: 20px !important;
+  /* border-top-right-radius: 20px !important;
+  border-top-left-radius: 20px !important; */
 }
 .nav-drawer .v-tabs-bar{
     background-color: rgba(206, 205, 255, 0.075) !important;
