--- a/front-end-vue/public/index.html
+++ b/front-end-vue/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>GLUG AUDITIONS 2021</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
@@ -36,8 +37,8 @@
   border-top: 1px solid white !important;
   border-right: 1px solid white !important;
   border-left: 1px solid white !important;
-  border-top-right-radius: 20px !important;
-  border-top-left-radius: 20px !important;
+  /* border-top-right-radius: 20px !important;
+  border-top-left-radius: 20px !important; */
 }
 .nav-drawer .v-tabs-bar{
     background-color: rgba(206, 205, 255, 0.075) !important;
