--- a/front-end-vue/public/index.html
+++ b/front-end-vue/public/index.html
@@ -32,20 +32,20 @@
   background-color: rgba(206, 205, 255, 0.0) !important;
 }
 .v-tabs-bar{
-    background-color: rgba(206, 205, 255, 0.075) !important;
+    background-color: rgba(206, 205, 255, 0.0) !important;
   backdrop-filter: blur(8px) !important;
-  border-top: 1px solid white !important;
-  border-right: 1px solid white !important;
-  border-left: 1px solid white !important;
-  /* border-top-right-radius: 20px !important;
-  border-top-left-radius: 20px !important; */
+  border-top: 1px solid rgb(53, 30, 255) !important;
+  border-right: 1px solid rgb(53, 30, 255) !important;
+  border-left: 1px solid rgb(53, 30, 255) !important;
+   border-top-right-radius: 20px !important;
+  border-top-left-radius: 20px !important; 
 }
 .nav-drawer .v-tabs-bar{
-    background-color: rgba(206, 205, 255, 0.075) !important;
+    background-color: rgba(0, 0, 0, 0.45) !important;
   backdrop-filter: blur(8px) !important;
-  border-top: 0px solid white !important;
-  border-right: 0px solid white !important;
-  border-left: 0px solid white !important;
+  border-top: 0px solid rgb(53, 30, 255) !important;
+  border-right: 0px solid rgb(53, 30, 255) !important;
+  border-left: 0px solid rgb(53, 30, 255) !important;
   border-top-right-radius: 20px !important;
   border-top-left-radius: 20px !important;
 }
