question UI update

--- a/front-end-vue/public/index.html
+++ b/front-end-vue/public/index.html
@@ -23,31 +23,42 @@
 .v-slide-group__wrapper::-webkit-scrollbar {
   display: none;
 }
-.v-slide-group__content{
-  background-color: rgba(206, 205, 255, 0.0) !important;
-  backdrop-filter: blur(0px) !important;
 
+.v-tab{
+  color: rgb(200, 204, 255) !important;
+  border-radius: 20px;
+}
+.v-slide-group__content{
+  background-color: rgba(255, 255, 255, 0.15) !important;
+  backdrop-filter: blur(0px) !important;
+border-top-right-radius: 20px !important;
+  border-top-left-radius: 20px !important; 
 }
 .v-tabs{
-  background-color: rgba(206, 205, 255, 0.0) !important;
+  background-color: rgba(255, 255, 255, 0.1) !important;
 }
 .v-tabs-bar{
     background-color: rgba(206, 205, 255, 0.0) !important;
   backdrop-filter: blur(8px) !important;
-  border-top: 1px solid rgb(53, 30, 255) !important;
-  border-right: 1px solid rgb(53, 30, 255) !important;
-  border-left: 1px solid rgb(53, 30, 255) !important;
+  border-top: 1px solid rgb(70, 104, 255) !important;
+  border-right: 1px solid rgb(70, 104, 255) !important;
+  border-left: 1px solid rgb(70, 104, 255) !important;
    border-top-right-radius: 20px !important;
   border-top-left-radius: 20px !important; 
 }
 .nav-drawer .v-tabs-bar{
     background-color: rgba(0, 0, 0, 0.45) !important;
   backdrop-filter: blur(8px) !important;
-  border-top: 0px solid rgb(53, 30, 255) !important;
-  border-right: 0px solid rgb(53, 30, 255) !important;
-  border-left: 0px solid rgb(53, 30, 255) !important;
+  border-top: 0px solid rgb(70, 104, 255) !important;
+  border-right: 0px solid rgb(70, 104, 255) !important;
+  border-left: 0px solid rgb(70, 104, 255) !important;
   border-top-right-radius: 20px !important;
   border-top-left-radius: 20px !important;
+}
+.question-cont .v-input__slot{
+  border: 2px solid #fff;
+    border-radius: 20px !important;
+    background-color: rgba(0,0,0,0) !important;
 }
 </style>
 </head>
