status colors added

--- a/front-end-vue/public/index.html
+++ b/front-end-vue/public/index.html
@@ -55,10 +55,15 @@ border-top-right-radius: 20px !important;
   border-top-right-radius: 20px !important;
   border-top-left-radius: 20px !important;
 }
+.question-cont .mcq .v-input__slot{
+  border: 0px solid #fff !important;
+  border-radius: 20px !important;
+  background-color: rgba(0,0,0,0) !important;
+}
 .question-cont .v-input__slot{
   border: 2px solid #fff;
-    border-radius: 20px !important;
-    background-color: rgba(0,0,0,0) !important;
+  border-radius: 20px !important;
+  background-color: rgba(0,0,0,0) !important;
 }
 </style>
 </head>
